--- a/src/AspnetCoreIdentityLong/appsettings.json
+++ b/src/AspnetCoreIdentityLong/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AspnetCoreIdentityLong-63a6407b-8b8c-487e-9dd5-76812bd9ed41;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local)\\sqlexpress;Database=AspnetCoreIdentityLong2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
